--- a/NIKE-TEST/Dockerfile
+++ b/NIKE-TEST/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-alpine
+FROM python:3.9-alpine
 MAINTAINER realize-sec
 
 ENV PYTHONUNBUFFERED 1
@@ -9,4 +9,5 @@ RUN pip install -r requirements.txt
 RUN mkdir /app
 WORKDIR /app
 COPY main.py /app
+COPY ../far-shore-config.yaml /app
 
